# docs/swagger.json
@@ -9,6 +9,36 @@
     "version": "1.0"
   },
   "paths": {
+    "/login": {
+      "post": {
+        "description": "Logs in user",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": "true",
+            "type": "object",
+            "schema": {
+              "$ref": "#/definitions/LoginRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Logs in user",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "401": {
+            "description": "Auth failed"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
     "/users": {
       "get": {
         "responses": {
@@ -38,36 +68,6 @@
           },
           "400": {
             "description": "Failed to create user"
-          }
-        }
-      }
-    },
-    "/users/login": {
-      "post": {
-        "description": "Logs in user",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": "true",
-            "type": "object",
-            "schema": {
-              "$ref": "#/definitions/LoginRequest"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Logs in user",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
-          },
-          "401": {
-            "description": "Auth failed"
-          },
-          "500": {
-            "description": "Internal server error"
           }
         }
       }
@@ -461,6 +461,166 @@
           }
         }
       }
+    },
+    "/subjects": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "Returns a list of all subjects",
+            "schema": {
+              "$ref": "#/definitions/Subjects"
+            }
+          },
+          "400": {
+            "description": "Failed to show subjects"
+          }
+        }
+      },
+      "post": {
+        "parameters": [
+          {
+            "$ref": "#/parameters/subjectData"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "New subject created",
+            "schema": {
+              "$ref": "#/definitions/Subject"
+            }
+          },
+          "400": {
+            "description": "Failed to create subject"
+          }
+        }
+      }
+    },
+    "/subjects/{id}": {
+      "get": {
+        "parameters": [
+          {
+            "$ref": "#/parameters/id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns subject by id",
+            "schema": {
+              "$ref": "#/definitions/Subject"
+            }
+          },
+          "400": {
+            "description": "Subject with given id does not exist"
+          }
+        }
+      },
+      "put": {
+        "parameters": [
+          {
+            "$ref": "#/parameters/id"
+          },
+          {
+            "$ref": "#/parameters/subjectData"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Subject updated",
+            "schema": {
+              "$ref": "#/definitions/Subject"
+            }
+          },
+          "400": {
+            "description": "Failed to update subject"
+          }
+        }
+      },
+      "delete": {
+        "parameters": [
+          {
+            "$ref": "#/parameters/id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Subject deleted",
+            "schema": {
+              "$ref": "#/definitions/Subject"
+            }
+          },
+          "400": {
+            "description": "Subject with given id does not exist."
+          }
+        }
+      }
+    },
+    "/subjectUsers": {
+      "get": {
+        "describtion": "Show subjectUsers",
+        "responses": {
+          "200": {
+            "description": "Show groups by userid",
+            "schema": {
+              "$ref": "#/definitions/SubjectUsers"
+            }
+          },
+          "400": {
+            "description": "Failed to show subjectsUsers"
+          }
+        }
+      }
+    },
+    "/testQuestions": {
+      "get": {
+        "describtion": "Show testQuestions",
+        "responses": {
+          "200": {
+            "description": "Show testQuestions by userid",
+            "schema": {
+              "$ref": "#/definitions/TestQuestions"
+            }
+          },
+          "400": {
+            "description": "Failed to show testQuestions"
+          }
+        }
+      }
+    },
+    "/tests/:testId/results": {
+      "get": {
+        "description": "Show results by testId",
+        "parameters": [
+          {
+            "name": "testId",
+            "in": "path",
+            "required": "true",
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Show decks by testId"
+          }
+        }
+      }
+    },
+    "/users/:userId/results": {
+      "get": {
+        "description": "Show results by userId",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": "true",
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Show decks by userId"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -479,15 +639,9 @@
         "role": {
           "type": "string",
           "enum": [
-<<<<<<< HEAD
-            "STUDENT",
-            "MENTOR",
-            "ADMIN"
-=======
             "ADMIN",
             "STUDENT",
             "MENTOR"
->>>>>>> feature/t3-emailSender
           ],
           "allowNull": false
         },
@@ -561,7 +715,11 @@
           "type": "integer"
         },
         "status": {
-          "type": "enum"
+          "type": "string",
+          "enum": [
+            "CLOSED",
+            "PUBLISHED"
+          ]
         }
       }
     },
@@ -607,6 +765,33 @@
         }
       }
     },
+    "SubjectUser": {
+      "properties": {
+        "subjectId": {
+          "type": "integer"
+        },
+        "userId": {
+          "type": "integer"
+        }
+      }
+    },
+    "Subject": {
+      "properties": {
+        "name": {
+          "type": "string"
+        }
+      }
+    },
+    "testQuestion": {
+      "properties": {
+        "questionId": {
+          "type": "integer"
+        },
+        "testId": {
+          "type": "integer"
+        }
+      }
+    },
     "Answers": {
       "type": "array",
       "items": {
@@ -635,6 +820,24 @@
       "type": "array",
       "items": {
         "$ref": "#/definitions/Group"
+      }
+    },
+    "Subjects": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/Subject"
+      }
+    },
+    "SubjectUsers": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/SubjectUsers"
+      }
+    },
+    "TestQuestions": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/TestQuestions"
       }
     }
   },
@@ -678,6 +881,13 @@
       "in": "body",
       "schema": {
         "$ref": "#/definitions/Answer"
+      }
+    },
+    "subjectData": {
+      "name": "subject",
+      "in": "body",
+      "schema": {
+        "$ref": "#/definitions/Subject"
       }
     }
   }
